# snowpycdk

./: .gitignore  config.py  devbox.json  main.py  pyproject.toml  readme.md
destinations/: bigquery.py  parquet.py
sources/: snowflake.py
